Memulai dengan vitepress, config Menu, halaman Geospatial, Load Image dari BMKG

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "devDependencies": {
     "vitepress": "latest"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4",
+    "leaflet.fullscreen": "^4.0.0"
   }
 }
